	PR middle-end/30744 	* fold-const.c (fold_comparison): Enforce type consistency when 	transforming ~X op ~Y to Y op X, and ~X op C to X op' ~C.

* gcc.dg/pr30744-1.c: New test case.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@122531 138bc75d-0d04-0410-961f-82ee72b054a4